syntax = "proto3";

package storage;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Nikita-Smirnov-idk/storage-service/contracts/gen/go;storagepb";

// Service for storing files
service Storage {
  // Get upload url RPC
  rpc GenerateUploadURL(GenerateUploadURLRequest) returns (GenerateUploadURLResponse) {}

  // Verify uploaded file RPC
  rpc VerifyUploadedFile(VerifyUploadedFileRequest) returns (VerifyUploadedFileResponse) {}

  // Get download url RPC
  rpc GenerateDownloadURL(GenerateDownloadURLRequest) returns (GenerateDownloadURLResponse) {}

  // Get list of info about files by task id
  rpc ListTaskFiles(ListTaskFilesRequest) returns (ListTaskFilesResponse) {}
}

// Request for url to upload file
message GenerateUploadURLRequest {
  string StudentId = 1;
  string TaskId = 2;
}

// Response after generating upload link
message GenerateUploadURLResponse {
  string Url = 1;
}

// Request for verifying uploaded file
message VerifyUploadedFileRequest {
  string StudentId = 1;
  string TaskId = 2;
}

// Response after verifying uploaded file
message VerifyUploadedFileResponse {
  string FileId = 1;
}

// Request for url to download file
message GenerateDownloadURLRequest {
  string StudentId = 1;
  string TaskId = 2;
  bool FromInside = 3;
}

// Response after generating download link
message GenerateDownloadURLResponse {
  string Url = 1;
}

// Request for students ids
message ListTaskFilesRequest {
  string TaskId = 1;
}

// Response for getting students ids
message ListTaskFilesResponse {
  repeated FileInfo Items = 1;
}

// File info
message FileInfo {
  string StudentId = 1;
  google.protobuf.Timestamp UpdatedAt = 2;
  string Status = 3;
}